// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Nav/SideMenu/UserMenu render snap when click avatar icon 1`] = `
<body>
  <div>
    <div
      class="dms-layout-side-end"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <span
            class="ant-avatar ant-avatar-circle action-avatar ant-popover-open css-1wq79dc css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="ant-avatar-string"
              style="transform: scale(1) translateX(-50%);"
            >
              A
            </span>
          </span>
        </div>
      </div>
      <div
        class="global-system-icon-wrapper"
      >
        <span
          class="custom-icon-global-system css-u3jcp4"
        >
          <svg
            fill="none"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
              fill="#c3c6cd"
              fill-rule="evenodd"
            />
            <path
              d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
              fill="#8a8f99"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-th3cxr"
            >
              <div
                class="header"
              >
                Admin
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 1.33325C11.6797 1.33325 14.6663 4.31992 14.6663 7.99992C14.6663 11.6799 11.6797 14.6666 7.99967 14.6666C4.31967 14.6666 1.33301 11.6799 1.33301 7.99992C1.33301 4.31992 4.31967 1.33325 7.99967 1.33325ZM4.01501 10.2773C4.99367 11.7373 6.46301 12.6666 8.10634 12.6666C9.74901 12.6666 11.219 11.7379 12.197 10.2773C11.0875 9.24032 9.62497 8.66446 8.10634 8.66659C6.58748 8.66429 5.12468 9.24016 4.01501 10.2773ZM7.99967 7.33325C8.53011 7.33325 9.03882 7.12254 9.41389 6.74747C9.78896 6.37239 9.99967 5.86369 9.99967 5.33325C9.99967 4.80282 9.78896 4.29411 9.41389 3.91904C9.03882 3.54397 8.53011 3.33325 7.99967 3.33325C7.46924 3.33325 6.96053 3.54397 6.58546 3.91904C6.21039 4.29411 5.99967 4.80282 5.99967 5.33325C5.99967 5.86369 6.21039 6.37239 6.58546 6.74747C6.96053 7.12254 7.46924 7.33325 7.99967 7.33325Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    个人中心
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <span
                    aria-label="notification"
                    class="anticon anticon-notification css-ehzaz2"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="notification"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
                      />
                    </svg>
                  </span>
                  <span
                    class="content-item-text"
                  >
                    系统公告
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 14.6666C4.31767 14.6666 1.33301 11.6819 1.33301 7.99992C1.33301 4.31792 4.31767 1.33325 7.99967 1.33325C11.6817 1.33325 14.6663 4.31792 14.6663 7.99992C14.6663 11.6819 11.6817 14.6666 7.99967 14.6666ZM7.33301 7.33325V11.3333H8.66634V7.33325H7.33301ZM7.33301 4.66659V5.99992H8.66634V4.66659H7.33301Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    查看版本号
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 14.6666C4.31777 14.6666 1.33301 11.6818 1.33301 7.99992C1.33301 4.31802 4.31777 1.33325 7.99967 1.33325C11.6815 1.33325 14.6663 4.31802 14.6663 7.99992C14.6663 11.6818 11.6815 14.6666 7.99967 14.6666ZM11.333 10.6666L14.6663 7.99992L11.333 5.33325V7.33325H5.99967V8.66659H11.333V10.6666Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    退出登录
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/Nav/SideMenu/UserMenu render snap when click system icon 1`] = `
<body>
  <div>
    <div
      class="dms-layout-side-end"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <span
            class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="ant-avatar-string"
              style="transform: scale(1) translateX(-50%);"
            >
              A
            </span>
          </span>
        </div>
      </div>
      <div
        class="global-system-icon-wrapper ant-popover-open"
      >
        <span
          class="custom-icon-global-system css-u3jcp4"
        >
          <svg
            fill="none"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
              fill="#575c66"
              fill-rule="evenodd"
            />
            <path
              d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
              fill="#575c66"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-th3cxr"
            >
              <div
                class="header"
              >
                全局设置
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.522 1.88408L8 0.666748L13.478 1.88408C13.626 1.91699 13.7584 1.99939 13.8533 2.11768C13.9482 2.23598 14 2.38309 14 2.53475V9.19275C14 9.85124 13.8373 10.4995 13.5266 11.0801C13.2158 11.6606 12.7666 12.1555 12.2187 12.5207L8 15.3334L3.78133 12.5207C3.23352 12.1556 2.78431 11.6608 2.47357 11.0804C2.16282 10.5 2.00016 9.85179 2 9.19341V2.53475C2.00003 2.38309 2.05176 2.23598 2.14666 2.11768C2.24156 1.99939 2.37396 1.91699 2.522 1.88408ZM8 7.33341C8.44203 7.33341 8.86595 7.15782 9.17851 6.84526C9.49107 6.5327 9.66667 6.10878 9.66667 5.66675C9.66667 5.22472 9.49107 4.8008 9.17851 4.48824C8.86595 4.17568 8.44203 4.00008 8 4.00008C7.55797 4.00008 7.13405 4.17568 6.82149 4.48824C6.50893 4.8008 6.33333 5.22472 6.33333 5.66675C6.33333 6.10878 6.50893 6.5327 6.82149 6.84526C7.13405 7.15782 7.55797 7.33341 8 7.33341ZM5.018 10.6667H10.982C10.9012 9.93235 10.5522 9.2536 10.0019 8.76056C9.45168 8.26753 8.73883 7.99489 8 7.99489C7.26117 7.99489 6.54832 8.26753 5.99805 8.76056C5.44779 9.2536 5.09881 9.93235 5.018 10.6667Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    用户中心
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 7.99992H4.66667V13.9999H2V7.99992ZM11.3333 5.33325H14V13.9999H11.3333V5.33325ZM6.66667 1.33325H9.33333V13.9999H6.66667V1.33325Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    报表统计
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.3333 14.6666H2.66667C2.48986 14.6666 2.32029 14.5963 2.19526 14.4713C2.07024 14.3463 2 14.1767 2 13.9999V1.99992C2 1.82311 2.07024 1.65354 2.19526 1.52851C2.32029 1.40349 2.48986 1.33325 2.66667 1.33325H13.3333C13.5101 1.33325 13.6797 1.40349 13.8047 1.52851C13.9298 1.65354 14 1.82311 14 1.99992V13.9999C14 14.1767 13.9298 14.3463 13.8047 14.4713C13.6797 14.5963 13.5101 14.6666 13.3333 14.6666ZM5.33333 4.66659V5.99992H10.6667V4.66659H5.33333ZM5.33333 7.33325V8.66659H10.6667V7.33325H5.33333ZM5.33333 9.99992V11.3333H8.66667V9.99992H5.33333Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    查看规则
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.3333 1.33325C13.7013 1.33325 14 1.63192 14 1.99992V4.50459L8.00067 10.5046L7.99667 13.3299L10.8273 13.3339L14 10.1613V13.9999C14 14.3679 13.7013 14.6666 13.3333 14.6666H2.66667C2.29867 14.6666 2 14.3679 2 13.9999V1.99992C2 1.63192 2.29867 1.33325 2.66667 1.33325H13.3333ZM14.5187 5.87192L15.4613 6.81459L10.276 11.9999L9.332 11.9986L9.33333 11.0573L14.5187 5.87192ZM8 7.99992H4.66667V9.33325H8V7.99992ZM10 5.33325H4.66667V6.66659H10V5.33325Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    规则管理
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.63571 1.47331C7.53499 1.28474 8.46357 1.28428 9.36304 1.47198C9.42296 1.86751 9.57125 2.24444 9.79689 2.57477C10.0225 2.90509 10.3197 3.18032 10.6664 3.37998C11.0127 3.58033 11.3998 3.70002 11.7988 3.73015C12.1978 3.76027 12.5985 3.70006 12.971 3.55398C13.5832 4.23935 14.047 5.04401 14.333 5.91731C14.0206 6.16703 13.7685 6.48395 13.5953 6.84451C13.4222 7.20507 13.3326 7.60001 13.333 7.99998C13.333 8.84265 13.7237 9.59398 14.3344 10.0826C14.0466 10.9552 13.5823 11.7592 12.9704 12.4446C12.5979 12.2987 12.1974 12.2385 11.7985 12.2686C11.3996 12.2988 11.0127 12.4184 10.6664 12.6186C10.32 12.8182 10.023 13.0933 9.79753 13.4234C9.57202 13.7535 9.42374 14.1301 9.36371 14.5253C8.46451 14.7143 7.53593 14.7152 6.63637 14.528C6.57674 14.1321 6.42858 13.7548 6.20292 13.4241C5.97726 13.0934 5.67993 12.8178 5.33304 12.618C4.98662 12.4177 4.59951 12.2982 4.2005 12.2682C3.80149 12.2381 3.40085 12.2985 3.02837 12.4446C2.4161 11.7591 1.95238 10.9542 1.66637 10.0806C1.97863 9.83107 2.23068 9.51437 2.4038 9.15405C2.57691 8.79374 2.66666 8.39906 2.66637 7.99931C2.6667 7.59923 2.57684 7.20423 2.40348 6.84366C2.23012 6.48309 1.97772 6.16623 1.66504 5.91665C1.95282 5.04406 2.41712 4.24005 3.02904 3.55465C3.40147 3.70062 3.80202 3.76078 4.2009 3.73065C4.59979 3.70053 4.98675 3.5809 5.33304 3.38065C5.6794 3.18105 5.97636 2.906 6.20188 2.57592C6.42739 2.24584 6.57567 1.86921 6.63571 1.47398V1.47331ZM7.99971 9.99998C8.53014 9.99998 9.03885 9.78927 9.41392 9.41419C9.78899 9.03912 9.99971 8.53041 9.99971 7.99998C9.99971 7.46955 9.78899 6.96084 9.41392 6.58577C9.03885 6.21069 8.53014 5.99998 7.99971 5.99998C7.46927 5.99998 6.96056 6.21069 6.58549 6.58577C6.21042 6.96084 5.99971 7.46955 5.99971 7.99998C5.99971 8.53041 6.21042 9.03912 6.58549 9.41419C6.96056 9.78927 7.46927 9.99998 7.99971 9.99998Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    系统设置
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/Nav/SideMenu/UserMenu render snap when current is admin 1`] = `
<body>
  <div>
    <div
      class="dms-layout-side-end"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <span
            class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="ant-avatar-string"
              style="transform: scale(1) translateX(-50%);"
            >
              A
            </span>
          </span>
        </div>
      </div>
      <div
        class="global-system-icon-wrapper"
      >
        <span
          class="custom-icon-global-system css-u3jcp4"
        >
          <svg
            fill="none"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
              fill="#c3c6cd"
              fill-rule="evenodd"
            />
            <path
              d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
              fill="#8a8f99"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</body>
`;
